sonarqube: fix ControllerTest